--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,15 @@
 <html>
-	<head>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	</head>
-	<body>
-		<div class="jumbotron">
-			<div class="container">
-				<h1>Welcome to my One Month Python project</h1>
-				<p>My name is Kyle Stuart and I'm a risk and strategy specialist in the insurance industry. I built this project for <a href="http://onemonth.com/courses/one-month-python">One Month Python</a>.</p>
-				<a href="{{ url_for('index') }}">Back to homepage</a>
-			</div>
-		</div>
-	</body>
+    <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    </head>
+    <body>
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Welcome to my Week 4 Assignment for One Month - Python </h1>
+                <p>If you would like to learn more about how I built this with Python go to <a href="http://onemonth.com/courses/one-month-python"> One Month</a>.</p>
+                <p>To get more information about weather your interested in go to <a href="https://darksky.net/forecast/45.3433,-75.8265/us12/en">Dark Sky</a>.</p>
+                <a href="{{ url_for('index')}}">Back to the Home Page</a>
+            </div>
+        </div>
+    </body>
 </html>
